Last problem solved

--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -87,7 +87,7 @@
 \cventry{5 meses}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
 \cventry{Nov.(2016)--act.}{Beca de colaboración con departamentos UCM}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos.}
 \cventry{Feb.(2017)--act.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
-\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} en Wordpress}{Grupo municipal Ahora Arganda}{}{}{}
+\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} con Wordpress y PHP }{Grupo municipal Ahora Arganda}{}{}{}
 
 \section{Otros méritos}
 \cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
@@ -96,74 +96,82 @@
 \item Estancia en Irlanda con una familia nativa(Agosto 2010).
 \end{itemize}}
 \cventry{Octubre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua que trabajaba con librerías científicas de python: numpy, matplotlib y pandas.}
-
+\newpage
 \section{Otros aspectos}
 \cventry{Conocimientos}{Lenguaje de programación:}{}{}{}{\begin{itemize}
-\item Python:
+\item \textbf{Python}
   \begin{itemize}
-  \item pandas
-  \item numpy
-  \item matplotlib
-  \item telegram-api
+  \item Pandas
+  \item Numpy
+  \item Matplotlib
+  \item Telegram API
 \end{itemize}
-\item C
+\item \textbf{C}
   \begin{itemize}
   \item Módulos del kernel
   \item Sockets
   \item Tuberías
 \end{itemize}
-\item C++
+\item \textbf{C++}
   \begin{itemize}
   \item OpenMP
   \item MARE
   \item OpenGL
 \end{itemize}
-\item C\#
+\item \textbf{C\#}
   \begin{itemize}
   \item OpenMP
   \item MARE
   \item OpenGL
 \end{itemize}
-\item Aplicaciones Android({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
-\item Java
+\item \textbf{Aplicaciones Android} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
+\item \textbf{Java}
   \begin{itemize}
   \item Hibernate
   \item JSP
   \item Maven
 \end{itemize}
-\item PHP
-\item JavaScript (jQuery)
-\item HTML
-\item CSS (Boostrap)
-\item Bash
+\item \textbf{PHP}
+\item \textbf{JavaScript} (jQuery)
+\item \textbf{HTML}
+\item \textbf{CSS} (Boostrap)
+\item \textbf{Bash}
+\medskip
 \end{itemize}}
 \cventry{}{Otras tecnologías:}{}{}{}{\begin{itemize}
-\item Bases de datos:
+\item \textbf{Bases de datos}
   \begin{itemize}
   \item SQL
   \item MongoDB
   \item Neo4J
 \end{itemize}
-\item Big Data:
+\medskip
+\item \textbf{Big Data}
 \begin{itemize}
   \item Map Reduce
   \item Spark
   \item Hadoop File System
 \end{itemize}
-\item \textit{Machine Learning}(Implementaciones en {\color{blue}\href{https://github.com/mizadri}{github}}):
+\medskip
+\item \textbf{Machine Learning}(Implementaciones en {\color{blue}\href{https://github.com/mizadri}{GitHub}}):
   \begin{itemize}
-    \item Árboles de clasificación ID3
-    \item Índice completo
-    \item Índice vectorial
-    \item Clasificador Bayesiano Simple(Naive Bayes)
+    \item Árboles de clasificación ID3.
+    \item Índice completo.
+    \item Índice vectorial.
+    \item Clasificador Bayesiano Simple(Naive Bayes).
   \end{itemize}
-  \item Virtualización:
+  \medskip
+\item \textbf{Administración de redes y virtualización}
 \begin{itemize}
   \item Configuración de redes IPv4 e IPv6 (configuración persistente con \textit{vtysh}).
   \item Administración de máquinas via SSH.
   \item Gestión de máquinas virtuales con kvm (\textit{virsh} y \textit{virt-manager}).
-  \item Instalación y configuración de entornos en Docker.
+  \item Instalación de entornos Docker.
 \end{itemize}
+\medskip
+\item \textbf{Edición de textos en LaTeX}(Memoria TFG o {\color{blue}\href{https://github.com/mizadri/LaTeX}{este CV}})
+\medskip
+\item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
 \end{itemize}}
 
 % Detailed achievements:
