--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -87,7 +87,7 @@
 \cventry{5 meses}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
 \cventry{Nov.(2016)--act.}{Beca de colaboración con departamentos UCM}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos.}
 \cventry{Feb.(2017)--act.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
-\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} con Wordpress y PHP }{Grupo municipal Ahora Arganda}{}{}{}
+\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} en Wordpress}{Grupo municipal Ahora Arganda}{}{}{}
 
 \section{Otros méritos}
 \cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
