--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -153,7 +153,7 @@
   \item Hadoop File System
 \end{itemize}
 \medskip
-\item \textbf{Machine Learning}(Implementaciones en {\color{blue}\href{https://github.com/mizadri}{GitHub}}):
+\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{Implementaciones en python}}):
   \begin{itemize}
     \item Árboles de clasificación ID3.
     \item Índice completo.
