Nueva descripcion de curso Big Data

--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -95,7 +95,7 @@
 \item Formación en la academia Dickens(2012 y 2016).
 \item Estancia en Irlanda con una familia nativa(Agosto 2010).
 \end{itemize}}
-\cventry{Octubre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua que trabajaba con librerías científicas de python: numpy, matplotlib y pandas.}
+\cventry{Octubre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas.}
 \newpage
 \section{Otros aspectos}
 \cventry{Conocimientos}{Lenguaje de programación:}{}{}{}{\begin{itemize}
