--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -133,7 +133,6 @@
 \end{itemize}
 \item \textbf{PHP}
 \item \textbf{JavaScript} (jQuery)
-\item \textbf{HTML}
 \item \textbf{CSS} (Boostrap)
 \item \textbf{Bash}
 \medskip
@@ -156,7 +155,7 @@
 \item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{Implementaciones en python}}):
   \begin{itemize}
     \item Árboles de clasificación ID3.
-    \item Índice completo.
+    \item Índice completo (compresión de datos con variable-bytes, elias-gamma o elias-delta).
     \item Índice vectorial.
     \item Clasificador Bayesiano Simple (Naive Bayes).
   \end{itemize}
