Corregido error en C sharp

--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -62,7 +62,7 @@
 \section{Formación académica}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
 \cventry{2011--2016}{Grado en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 7,82}}{} % arguments 3 to 6 can be left empty
-\cventry{2016--act.}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 9,12}}{30 créditos ECTS completados(66 matriculados).}
+\cventry{2016--act.}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 9,12}}{30 créditos ECTS completados (66 matriculados).}
 
 
 % \section{Master thesis}
@@ -71,7 +71,7 @@
 % \cvitem{description}{Short thesis abstract}
 \section{Premios}
 \cventry{2011--2016}{Matriculas de honor del Grado en Ingeniería Informática}{UCM}{Madrid}{}{\begin{itemize}
-\item Trabajo de fin de grado(Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos)
+\item Trabajo de fin de grado (Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos).
 \item Sistemas operativos
 \item Ampliación de sistemas operativos y redes
 \item Arquitectura de computadores
@@ -92,13 +92,13 @@
 \section{Otros méritos}
 \cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
 \item Certificados FCE y CAE de la Universidad de Cambridge.
-\item Formación en la academia Dickens(2012 y 2016).
-\item Estancia en Irlanda con una familia nativa(Agosto 2010).
+\item Formación en la academia Dickens (2012 y 2016).
+\item Estancia en Irlanda con una familia nativa (Agosto 2010).
 \end{itemize}}
 \cventry{Octubre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas.}
 \newpage
 \section{Otros aspectos}
-\cventry{Conocimientos}{Lenguaje de programación:}{}{}{}{\begin{itemize}
+\cventry{Conocimientos}{Lenguajes de programación:}{}{}{}{\begin{itemize}
 \item \textbf{Python}
   \begin{itemize}
   \item Pandas
@@ -120,9 +120,9 @@
 \end{itemize}
 \item \textbf{C\#}
   \begin{itemize}
-  \item OpenMP
-  \item MARE
-  \item OpenGL
+  \item ASP.NET MVC
+  \item Razor
+  \item jQuery UI
 \end{itemize}
 \item \textbf{Aplicaciones Android} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
 \item \textbf{Java}
@@ -158,7 +158,7 @@
     \item Árboles de clasificación ID3.
     \item Índice completo.
     \item Índice vectorial.
-    \item Clasificador Bayesiano Simple(Naive Bayes).
+    \item Clasificador Bayesiano Simple (Naive Bayes).
   \end{itemize}
   \medskip
 \item \textbf{Administración de redes y virtualización}
@@ -169,7 +169,7 @@
   \item Instalación de entornos Docker.
 \end{itemize}
 \medskip
-\item \textbf{Edición de textos en LaTeX}(Memoria TFG o {\color{blue}\href{https://github.com/mizadri/LaTeX}{este CV}})
+\item \textbf{Edición de textos en LaTeX} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Memoria de TFG}} o {\color{blue}\href{https://github.com/mizadri/LaTeX}{este CV}})
 \medskip
 \item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
 \end{itemize}}
