Added phD proposal stuff

--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -84,49 +84,54 @@
 
 \section{Experiencia profesional}
 % \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{5 meses}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
-\cventry{Nov.(2016)--act.}{Beca de colaboración con departamentos UCM}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos.}
-\cventry{Feb.(2017)--act.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
+\cventry{Abr. 2016- Ago. 2016}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
+\cventry{Nov. 2016- actualidad.}{Beca de colaboración con departamentos}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos. Otorgada por el Ministerio de Educación, Cultura y Deporte.}
+\cventry{Feb. 2017- actualidad.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
 \cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} en Wordpress}{Grupo municipal Ahora Arganda}{}{}{}
 
 \section{Otros méritos}
 \cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
-\item Certificados FCE y CAE de la Universidad de Cambridge.
-\item Formación en la academia Dickens (2012 y 2016).
-\item Estancia en Irlanda con una familia nativa (Agosto 2010).
+\item Certificados de la Universidad de Cambridge.
+\begin{itemize}
+  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, Abril de 2012.
+  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, Septiembre de 2016.
+\end{itemize}
+\item Formación en la academia Dickens (2011 y 2015).
+\item Estancia de 1 mes en Athenry (Irlanda) con una familia nativa durante la que se realizaba un
+curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificado}}.
 \end{itemize}}
-\cventry{Octubre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas.}
+\cventry{Noviembre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificado}}.}
 \newpage
 \section{Otros aspectos}
 \cventry{Conocimientos}{Lenguajes de programación:}{}{}{}{\begin{itemize}
 \item \textbf{Python}
-  \begin{itemize}
+\begin{itemize}
   \item Pandas
   \item Numpy
   \item Matplotlib
   \item Telegram API
 \end{itemize}
 \item \textbf{C}
-  \begin{itemize}
+\begin{itemize}
   \item Módulos del kernel
   \item Sockets
   \item Tuberías
 \end{itemize}
 \item \textbf{C++}
-  \begin{itemize}
+\begin{itemize}
   \item OpenMP
   \item MARE
   \item OpenGL
 \end{itemize}
 \item \textbf{C\#}
-  \begin{itemize}
+\begin{itemize}
   \item ASP.NET MVC
   \item Razor
   \item jQuery UI
 \end{itemize}
 \item \textbf{Aplicaciones Android} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
 \item \textbf{Java}
-  \begin{itemize}
+\begin{itemize}
   \item Hibernate
   \item JSP
   \item Maven
@@ -138,6 +143,8 @@
 \medskip
 \end{itemize}}
 \cventry{}{Otras tecnologías:}{}{}{}{\begin{itemize}
+\item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
+\medskip
 \item \textbf{Bases de datos}
   \begin{itemize}
   \item SQL
@@ -169,39 +176,12 @@
 \end{itemize}
 \medskip
 \item \textbf{Edición de textos en LaTeX} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Memoria de TFG}} o {\color{blue}\href{https://github.com/mizadri/LaTeX}{este CV}})
-\medskip
-\item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
 \end{itemize}}
-
-% Detailed achievements:
-% \begin{itemize}%
-% \item Achievement 1;
-% \item Matriculas de Honor del Grado en Ingeniería Informática(UCM):
-%   \begin{itemize}%
-%   \item Sub-achievement (a);
-%   \item Sub-achievement (b), with sub-sub-achievements (don't do this!);
-%     \begin{itemize}
-%     \item Sub-sub-achievement i;
-%     \item Sub-sub-achievement ii;
-%     \item Sub-sub-achievement iii;
-%     \end{itemize}
-%   \item Sub-achievement (c);
-%   \end{itemize}
-% \item Achievement 3.
-% \end{itemize}}
-
-
 
 % \section{Computer skills}
 % \cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
 % \cvdoubleitem{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
 % \cvdoubleitem{category 3}{XXX, YYY, ZZZ}{category 6}{XXX, YYY, ZZZ}
-
-% \section{Interests}
-% \cvitem{hobby 1}{Description}
-% \cvitem{hobby 2}{Description}
-% \cvitem{hobby 3}{Description}
-
 
 % \section{References}
 % \begin{cvcolumns}
@@ -229,6 +209,3 @@
 
 %\clearpage\end{CJK*}                              % if you are typesetting your resume in Chinese using CJK; the \clearpage is required for fancyhdr to work correctly with CJK, though it kills the page numbering by making \lastpage undefined
 \end{document}
-
-
-%% end of file `template.tex'.
