Fixed TFG structure

--- a/cv/curriculum-vitae.tex
+++ b/cv/curriculum-vitae.tex
@@ -70,8 +70,12 @@
 % \cvitem{supervisors}{Supervisors}
 % \cvitem{description}{Short thesis abstract}
 \section{Premios}
+\cventry{Junio de 2016}{Matrícula de honor en Trabajo de Fin de Grado}{Facultad de Informática, UCM}{}{}{\begin{itemize}
+\item \textbf{Título}: Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos.
+\item \textbf{Director}: Juan Carlos Sáez Alcaide.
+\item \textbf{Departamento de Arquitectura de Computadores y Automática}.
+\end{itemize}}
 \cventry{2011--2016}{Matriculas de honor del Grado en Ingeniería Informática}{UCM}{Madrid}{}{\begin{itemize}
-\item Trabajo de fin de grado (Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos).
 \item Sistemas operativos
 \item Ampliación de sistemas operativos y redes
 \item Arquitectura de computadores
@@ -101,9 +105,8 @@
 curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificado}}.
 \end{itemize}}
 \cventry{Noviembre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificado}}.}
-\newpage
 \section{Otros aspectos}
-\cventry{Conocimientos}{Lenguajes de programación:}{}{}{}{\begin{itemize}
+\cventry{Conocimientos}{Lenguajes de programación}{}{}{}{\begin{itemize}
 \item \textbf{Python}
 \begin{itemize}
   \item Pandas
@@ -142,7 +145,7 @@ curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.go
 \item \textbf{Bash}
 \medskip
 \end{itemize}}
-\cventry{}{Otras tecnologías:}{}{}{}{\begin{itemize}
+\cventry{}{Otras tecnologías}{}{}{}{\begin{itemize}
 \item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
 \medskip
 \item \textbf{Bases de datos}
